--- a/frontend/package.json
+++ b/frontend/package.json
@@ -19,7 +19,9 @@
     "react-scripts": "^3.4.1",
     "typeface-roboto": "^0.0.75",
     "websocket-extensions": "^0.1.4",
-    "lodash": "^4.17.19"
+    "lodash": "^4.17.19",
+    "node-forge": "^0.10.0",
+    "serialize-javascript": "^3.1.0"
   },
   "scripts": {
     "start": "react-scripts start",
