--- a/frontend/package.json
+++ b/frontend/package.json
@@ -3,31 +3,19 @@
   "version": "0.1.0",
   "private": true,
   "dependencies": {
-    "@aws-amplify/ui-react": "^0.2.3",
-    "@material-ui/core": "^4.9.11",
-    "@material-ui/icons": "^4.9.1",
-    "@material-ui/lab": "^4.0.0-alpha.56",
-    "@testing-library/jest-dom": "^4.2.4",
-    "@testing-library/react": "^9.5.0",
-    "@testing-library/user-event": "^7.2.1",
-    "aws-amplify": "^3.0.8",
-    "aws-amplify-react": "^4.1.7",
-    "react": "^16.13.1",
-    "react-dom": "^16.13.1",
-    "react-dropzone": "^11.0.1",
-    "react-images-upload": "^1.2.8",
-    "react-scripts": "^3.4.1",
-    "typeface-roboto": "^0.0.75",
-    "websocket-extensions": "^0.1.4",
-    "lodash": "^4.17.19",
-    "node-forge": "^0.10.0",
-    "serialize-javascript": "^3.1.0",
-    "object-path": "^0.11.5"
+    "@material-ui/core": "^4.12.4",
+    "@material-ui/icons": "^4.11.3",
+    "aws-amplify": "^4.3.34",
+    "react": "^17.0.2",
+    "react-dom": "^17.0.2",
+    "typeface-roboto": "^1.1.13"
+  },
+  "devDependencies": {
+    "react-scripts": "^5.0.1"
   },
   "scripts": {
     "start": "react-scripts start",
     "build": "react-scripts build",
-    "test": "react-scripts test",
     "eject": "react-scripts eject"
   },
   "eslintConfig": {
